--- a/Project18 LimitCharacters/LimitCharaters/LimitCharaters/Base.lproj/Main.storyboard
+++ b/Project18 LimitCharacters/LimitCharaters/LimitCharaters/Base.lproj/Main.storyboard
@@ -108,7 +108,7 @@
                             </imageView>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="43a-5P-Wrp">
                                 <rect key="frame" x="88" y="61" width="271" height="266"/>
-                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <color key="backgroundColor" red="1" green="0.90068902472351442" blue="0.31948111214156139" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="266" id="HwL-kG-t3Q"/>
                                 </constraints>
